hard-gists/6085344/run.log
=== Docker Run Log for 6085344 ===
Started at: Mi 29. Okt 16:19:12 CET 2025

[2025-10-29 16:19:13] START: Running container for 6085344
[2025-10-29 16:19:13] SUCCESS: Container b737d62dc0e1890113dd997ac52367b05e58e61af3f16cf8f0dbbd51094bb6c5 started for 6085344
=== Container logs for 6085344 ===
  File "/snippet.py", line 30
    print "Closing Bearclaw"
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6085344 ===
[2025-10-29 16:19:15] INFO: Container b737d62dc0e1890113dd997ac52367b05e58e61af3f16cf8f0dbbd51094bb6c5 has stopped
